--- a/style.css
+++ b/style.css
@@ -586,7 +586,7 @@ nav.main-menu {
 }
 .heroslider .slider-01 {
 	width: 100%;
-	background-image: url(../images/slider-01.jpg);
+	background-image: url(slider-01.jpg);
 	background-size: cover;
 	background-position: center;
 }
